API Add cdf(x,y) for probability of value between x and y

--- a/TODO
+++ b/TODO
@@ -1,13 +1,10 @@
 Features TBD:
 
-+ histogram(+ min, max, [rl]trim, n) returning [[ height, low, high ], ... ]
-+ sample scaling (aka "forget gradually")
-* clone( + min, max, zero_thresh, base, ... )
-* cdf( $x, $y ) for intervals
+* trim data( + min, max, ... )
 * generate (random var with $self's distribution)
-* remove_data( )
 * total_abs_error, mean_abs_error - think more
-+ linear interval around zero
+* data inspection tools - allow user to look at real bin counts
+* framework for sophisticated algorithms over data
 
 Cleanup:
 
@@ -17,7 +14,7 @@ Cleanup:
 Features for discussion:
 
 * better mode algorithm
-* linear interpolation on add_data
+* Additional module with smooth data model (more CPU, more precision, exact mean)
 * how to find the bulk of a distribution
 * C++/XS library
 * analysis tools (like: Your sample looks like 45% normal (100, 15) + 35% exp (100) + 20% utter rubbish)
