--- a/Changes
+++ b/Changes
@@ -1,5 +1,18 @@
 Revision history for Statistics-Descriptive-LogScale
 
+0.08    Tue May 12 2015
+
+	API Change default base 10**1/48 (~5%) => 10**1/232 (~1%);
+	API Remove broken mode() method, replace with a naive one
+	    that at least works for discrete distributions;
+	API add_data_hash() can be used to forget data if needed;
+	API Add cdf(x,y) for probability of value between x and y;
+	BUG Make all methods return undef if there's no data;
+	DOC Add more examples to POD: basic usage, save/load, histogram;
+	DOC Add examples/save-load.pl (works with JSON files);
+	DOC Cleanup examples (summary, png) in examples directory;
+	DOC Add README.md for github
+
 0.07    Mon Apr 27 2015
 	DOC Rename buckets => bins in POD and comments
 	API Add linear approximation approximation around zero
