--- a/TODO
+++ b/TODO
@@ -4,11 +4,11 @@ Features TBD:
 * 0.05    total_abs_error, mean_abs_error - think more
 * 0.07    data inspection tools - allow user to look at real bin counts
 * 0.07    framework for sophisticated algorithms over data
-* 0.07    add normalization parameter to histogram (i.e. picture height)
 * 0.08    add multipoint interpolation to sum_of/mean_of
 * 0.08    write script for studying how mean etc converge with smaller bases
-* 0.08    trim data( + min, max, ... )
 * 0.08    add infinity abs threshold to disregard BIG values
+* 0.08    add abs($x - mean)**power (who needs it?)
+* 0.08    TST metatest: i.e. analyze several samples, compare results to past.
 
 Cleanup:
 
